<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:src="@color/placeholder_bg" />

    <TextView
        android:id="@+id/tv_nama_user"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:text="@string/name"
        android:background="@color/placeholder_bg"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:background="@color/placeholder_bg"
        tools:text="@string/username" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_followers_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="100"
                android:background="@color/placeholder_bg"/>

            <TextView
                android:id="@+id/tv_followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@null"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="4dp"
            android:background="@color/placeholder_bg" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_following_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="100"
                android:background="@color/placeholder_bg"/>

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:background="@null"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_repository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:background="@color/placeholder_bg"
        tools:text="@string/total_repo" />

    <TextView
        android:id="@+id/tv_company"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        app:drawableTint="@color/white"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_location_city"
        tools:text="Company"
        android:background="@color/placeholder_bg"/>

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        app:drawableTint="@color/white"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        app:drawableStartCompat="@drawable/ic_location"
        tools:text="Current Location"
        android:background="@color/placeholder_bg"/>
</LinearLayout>